<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_plant"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imageView_plant"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/plant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/plant_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/plant_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/plant_tipo"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>